dist/1.0/bin/sample/retrieveUnpackaged/objects/Simplified_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account_Identification_Type__c</fullName>
        <description>Account Identification Type for new Account</description>
        <inlineHelpText>Account Identification Type for new Account</inlineHelpText>
        <label>Account Identification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name for new Account</description>
        <inlineHelpText>Account Name for new Account</inlineHelpText>
        <label>Account Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Account Status Type for new Account</description>
        <inlineHelpText>Account Status Type for new Account</inlineHelpText>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Potential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Related Account</description>
        <inlineHelpText>Related Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Simplified Orders (Account)</relationshipLabel>
        <relationshipName>Simplified_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <description>Activated Date</description>
        <inlineHelpText>Activated Date</inlineHelpText>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BA_Bank_Account_Number__c</fullName>
        <description>Bank Account Number (for Billing Account)</description>
        <inlineHelpText>Bank Account Number (for Billing Account)</inlineHelpText>
        <label>Bank Account Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Bank_Code__c</fullName>
        <description>Bank Code</description>
        <formula>BA_Bank_Name__r.Bank_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bank Code</inlineHelpText>
        <label>Bank Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Bank_Name__c</fullName>
        <description>Bank Name (for Billing Account)</description>
        <inlineHelpText>Bank Name (for Billing Account)</inlineHelpText>
        <label>Bank Name</label>
        <referenceTo>Bank_Data__c</referenceTo>
        <relationshipLabel>Simplified Orders (Bank Name)</relationshipLabel>
        <relationshipName>Simplified_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Bank Account Number</description>
        <inlineHelpText>Bank Account Number</inlineHelpText>
        <label>Bank Account Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>Bank Name</description>
        <inlineHelpText>Bank Name</inlineHelpText>
        <label>Bank Name</label>
        <referenceTo>Bank_Data__c</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Specific_Symbol__c</fullName>
        <description>Bank Specific Symbol</description>
        <inlineHelpText>Bank Specific Symbol</inlineHelpText>
        <label>Bank Specific Symbol</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <description>Billing Account Name</description>
        <inlineHelpText>Billing Account Name</inlineHelpText>
        <label>Billing Account Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Status__c</fullName>
        <description>Billing Account Status</description>
        <inlineHelpText>Billing Account Status</inlineHelpText>
        <label>Billing Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Related Billing Account</description>
        <inlineHelpText>Related Billing Account</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Simplified Orders (Billing Account)</relationshipLabel>
        <relationshipName>Simplified_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Binding_Period__c</fullName>
        <description>Binding Period</description>
        <inlineHelpText>Binding Period</inlineHelpText>
        <label>Binding Period</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Simplified Orders (Binding Period)</relationshipLabel>
        <relationshipName>Simplified_Orders6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit</description>
        <inlineHelpText>Business Unit</inlineHelpText>
        <label>Business Unit</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Simplified Orders (Business Unit)</relationshipLabel>
        <relationshipName>Simplified_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CProduct__c</fullName>
        <description>Related Bundle</description>
        <inlineHelpText>Related Bundle</inlineHelpText>
        <label>Product (custom)</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRD_Tax_Identification_Number__c</fullName>
        <description>Tax Identification Number</description>
        <inlineHelpText>Tax Identification Number</inlineHelpText>
        <label>Tax Identification Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRD_VAT_Number__c</fullName>
        <description>VAT Number</description>
        <inlineHelpText>VAT Number</inlineHelpText>
        <label>VAT Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_VAT__c</fullName>
        <description>Class VAT</description>
        <inlineHelpText>Class VAT</inlineHelpText>
        <label>Class VAT</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Signed_Date__c</fullName>
        <description>Company Signed Date</description>
        <inlineHelpText>Company Signed Date</inlineHelpText>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>First Name</description>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <description>Mobile</description>
        <inlineHelpText>Mobile</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Contact Type</description>
        <inlineHelpText>Contact Type</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Contract End Date</description>
        <inlineHelpText>Contract End Date</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Contract Start Date</description>
        <inlineHelpText>Contract Start Date</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <description>Contract Status</description>
        <inlineHelpText>Contract Status</inlineHelpText>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Contract Type</description>
        <inlineHelpText>Contract Type</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address__c</fullName>
        <description>Correspondence Address</description>
        <inlineHelpText>Correspondence Address</inlineHelpText>
        <label>Correspondence Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Simplified Orders (Correspondence Address)</relationshipLabel>
        <relationshipName>Simplified_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correspondence_City__c</fullName>
        <description>Correspondence City</description>
        <inlineHelpText>Correspondence City</inlineHelpText>
        <label>Correspondence City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Country__c</fullName>
        <description>Correspondence Country</description>
        <inlineHelpText>Correspondence Country</inlineHelpText>
        <label>Correspondence Country</label>
        <picklist>
            <picklistValues>
                <fullName>Slovakia</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correspondence_Postal_Code__c</fullName>
        <description>Correspondence Postal Code</description>
        <inlineHelpText>Correspondence Postal Code</inlineHelpText>
        <label>Correspondence Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Street_No__c</fullName>
        <description>Correspondence Street Number</description>
        <inlineHelpText>Correspondence Street Number</inlineHelpText>
        <label>Correspondence Street No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Street__c</fullName>
        <description>Correspondence Street</description>
        <inlineHelpText>Correspondence Street</inlineHelpText>
        <label>Correspondence Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Formula__c</fullName>
        <description>Currency</description>
        <formula>TEXT(CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Currency</inlineHelpText>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Class__c</fullName>
        <description>Customer Class</description>
        <inlineHelpText>Customer Class</inlineHelpText>
        <label>Customer Class</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreigner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_Date__c</fullName>
        <description>Customer Signed Date</description>
        <inlineHelpText>Customer Signed Date</inlineHelpText>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debtor_Group__c</fullName>
        <description>Debtor Group</description>
        <inlineHelpText>Debtor Group</inlineHelpText>
        <label>Debtor Group</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Additional description</description>
        <inlineHelpText>Additional description</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Account__c</fullName>
        <description>Relation to already existing Account</description>
        <inlineHelpText>Relation to already existing Account</inlineHelpText>
        <label>Existing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Billing_Account__c</fullName>
        <description>Relation to already existing Billing Account</description>
        <inlineHelpText>Relation to already existing Billing Account</inlineHelpText>
        <label>Existing Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Contact__c</fullName>
        <description>Relation to already existing Contact</description>
        <inlineHelpText>Relation to already existing Contact</inlineHelpText>
        <label>Existing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Attachment__c</fullName>
        <description>Relation to External Attachment</description>
        <inlineHelpText>Relation to External Attachment</inlineHelpText>
        <label>External Attachment</label>
        <referenceTo>External_Attachment__c</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax number</description>
        <inlineHelpText>Fax number</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name</description>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_No__c</fullName>
        <description>Identification number</description>
        <inlineHelpText>Identification number</inlineHelpText>
        <label>Identification No</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Type__c</fullName>
        <description>Identification type</description>
        <inlineHelpText>Identification type</inlineHelpText>
        <label>Identification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company registration number</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Order__c</fullName>
        <description>Related Installation Order</description>
        <inlineHelpText>Related Installation Order</inlineHelpText>
        <label>Installation Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery__c</fullName>
        <label>Invoice Delivery</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Simplified Orders (Invoice Delivery)</relationshipLabel>
        <relationshipName>Simplified_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Email__c</fullName>
        <description>Invoice Email</description>
        <inlineHelpText>Invoice Email</inlineHelpText>
        <label>Invoice Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Language__c</fullName>
        <description>Invoice Language</description>
        <inlineHelpText>Invoice Language</inlineHelpText>
        <label>Invoice Language</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Simplified Orders (Invoice Language)</relationshipLabel>
        <relationshipName>Simplified_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Layout__c</fullName>
        <description>Invoice Layout</description>
        <inlineHelpText>Invoice Layout</inlineHelpText>
        <label>Invoice Layout</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Simplified Orders (Invoice Layout)</relationshipLabel>
        <relationshipName>Simplified_Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoicing_Address__c</fullName>
        <description>Invoicing Address</description>
        <inlineHelpText>Invoicing Address</inlineHelpText>
        <label>Invoicing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Simplified Orders (Invoicing Address)</relationshipLabel>
        <relationshipName>Simplified_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <description>Limit</description>
        <inlineHelpText>Limit</inlineHelpText>
        <label>Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <description>Order Line Type</description>
        <inlineHelpText>Order Line Type</inlineHelpText>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Service</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Contract_Number__c</fullName>
        <description>Local Contract Number</description>
        <inlineHelpText>Local Contract Number</inlineHelpText>
        <label>Local Contract Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_of_Payment__c</fullName>
        <defaultValue>14</defaultValue>
        <description>Maturity of payment</description>
        <inlineHelpText>Maturity of payment</inlineHelpText>
        <label>Maturity of Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price__c</fullName>
        <description>Monthly Recurring Price</description>
        <inlineHelpText>Monthly Recurring Price</inlineHelpText>
        <label>Monthly Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price__c</fullName>
        <description>Non Recurring Price</description>
        <inlineHelpText>Non Recurring Price</inlineHelpText>
        <label>Non Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notification_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CARE_PL_366 Notification after installing services</description>
        <inlineHelpText>Points SO for which notification about installed products has been already send</inlineHelpText>
        <label>Notification Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Opportunity Name</description>
        <inlineHelpText>Opportunity Name</inlineHelpText>
        <label>Opportunity Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <description>Opportunity Record Type</description>
        <inlineHelpText>Opportunity Record Type</inlineHelpText>
        <label>Opportunity Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>Opportunity Stage</description>
        <inlineHelpText>Opportunity Stage</inlineHelpText>
        <label>Opportunity Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Signature</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_Details__c</fullName>
        <description>Opportunity Type Details</description>
        <inlineHelpText>Opportunity Type Details</inlineHelpText>
        <label>Opportunity Type Details</label>
        <picklist>
            <controllingField>Opportunity_Type__c</controllingField>
            <picklistValues>
                <fullName>New Service</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>Opportunity Type</description>
        <inlineHelpText>Opportunity Type</inlineHelpText>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Partner Account</description>
        <inlineHelpText>Partner Account</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Simplified Orders (Partner Account)</relationshipLabel>
        <relationshipName>Simplified_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Payment Method</description>
        <inlineHelpText>Payment Method</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Simplified Orders (Payment Method)</relationshipLabel>
        <relationshipName>Simplified_Orders5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Planned_Billing_Stop__c</fullName>
        <description>Planned Billing Stop</description>
        <inlineHelpText>Planned Billing Stop</inlineHelpText>
        <label>Planned Billing Stop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Provisioning_Start__c</fullName>
        <description>Determines date when Provisioning Plan should start.</description>
        <inlineHelpText>Determines date when Provisioning Plan should start.</inlineHelpText>
        <label>Planned Provisioning Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <description>Primary</description>
        <inlineHelpText>Primary</inlineHelpText>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Related main Product</description>
        <inlineHelpText>Related main Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Address__c</fullName>
        <description>Registration Address</description>
        <inlineHelpText>Registration Address</inlineHelpText>
        <label>Registration Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_City__c</fullName>
        <description>Registration City</description>
        <inlineHelpText>Registration City</inlineHelpText>
        <label>Registration City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Country__c</fullName>
        <description>Registration Country</description>
        <inlineHelpText>Registration Country</inlineHelpText>
        <label>Registration Country</label>
        <picklist>
            <picklistValues>
                <fullName>Slovakia</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Postal_Code__c</fullName>
        <description>Registration Postal Code</description>
        <inlineHelpText>Registration Postal Code</inlineHelpText>
        <label>Registration Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Street_No__c</fullName>
        <description>Registration Street Number</description>
        <inlineHelpText>Registration Street Number</inlineHelpText>
        <label>Registration Street No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Street__c</fullName>
        <description>Registration Street</description>
        <inlineHelpText>Registration Street</inlineHelpText>
        <label>Registration Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_User__c</fullName>
        <description>User, that should be set as Owner of newly created objects</description>
        <inlineHelpText>User, that should be set as Owner of newly created objects</inlineHelpText>
        <label>Sales User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Account&apos;s Segment</description>
        <inlineHelpText>Account&apos;s Segment</inlineHelpText>
        <label>Segment</label>
        <picklist>
            <controllingField>Identification_Type__c</controllingField>
            <picklistValues>
                <fullName>SOHO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SOHO+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Related Service Bundle</description>
        <inlineHelpText>Related Service Bundle</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Simplified Orders</relationshipLabel>
        <relationshipName>Simplified_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Notification_Address__c</fullName>
        <description>Service Notification Address</description>
        <inlineHelpText>Service Notification Address</inlineHelpText>
        <label>Service Notification Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Notification_Body__c</fullName>
        <description>Service Notification Email&apos;s Body</description>
        <inlineHelpText>Service Notification Email&apos;s Body</inlineHelpText>
        <label>Service Notification Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>